--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "projeto15--kgg--pet-shop--back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js"
